finish fixing index image overlap on ipad portrait

--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ span.new-snowflake {
   left: 0;
   right: 0;
   max-width: 100%;
-  max-height: 80%;
+  max-height: 100%;
   transition: opacity 2s ease-in-out;
   box-shadow: 2px 2px 5px rgb(var(--secondary-bg-color));
 }
